# llm-zoomcamp-2025

./: .gitignore  Makefile  README.md  docker-compose.vector-search.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
